wxcl/src/windows/cffi/wxGrid_cpp.lisp


(defcfun ("wxGrid_BlockToDeviceRect" wxGrid_BlockToDeviceRect) :void
  (_obj :pointer)
  (top :int)
  (left :int)
  (bottom :int)
  (right :int)
  (x :int)
  (y :int)
  (w :int)
  (h :int))

(defcfun ("wxGrid_GetSelectionBackground" wxGrid_GetSelectionBackground) :void
  (_obj :pointer)
  (colour :pointer))

(defcfun ("wxGrid_GetSelectionForeground" wxGrid_GetSelectionForeground) :void
  (_obj :pointer)
  (colour :pointer))

(defcfun ("wxGrid_SetSelectionBackground" wxGrid_SetSelectionBackground) :void
  (_obj :pointer)
  (c :pointer))

(defcfun ("wxGrid_SetSelectionForeground" wxGrid_SetSelectionForeground) :void
  (_obj :pointer)
  (c :pointer))

(defcfun ("wxGrid_RegisterDataType" wxGrid_RegisterDataType) :void
  (_obj :pointer)
  (typeName :pointer)
  (renderer :pointer)
  (editor :pointer))

(defcfun ("wxGrid_GetDefaultEditorForCell" wxGrid_GetDefaultEditorForCell) :pointer
  (_obj :pointer)
  (row :int)
  (col :int))

(defcfun ("wxGrid_GetDefaultRendererForCell" wxGrid_GetDefaultRendererForCell) :pointer
  (_obj :pointer)
  (row :int)
  (col :int))

(defcfun ("wxGrid_GetDefaultEditorForType" wxGrid_GetDefaultEditorForType) :pointer
  (_obj :pointer)
  (typeName :pointer))

(defcfun ("wxGrid_GetDefaultRendererForType" wxGrid_GetDefaultRendererForType) :pointer
  (_obj :pointer)
  (typeName :pointer))

(defcfun ("wxGrid_SetMargins" wxGrid_SetMargins) :void
  (_obj :pointer)
  (extraWidth :int)
  (extraHeight :int))

(defcfun ("wxGrid_GetSelectedCells" wxGrid_GetSelectedCells) :void
  (_obj :pointer)
  (_arr :pointer))

(defcfun ("wxGrid_GetSelectionBlockTopLeft" wxGrid_GetSelectionBlockTopLeft) :void
  (_obj :pointer)
  (_arr :pointer))

(defcfun ("wxGrid_GetSelectionBlockBottomRight" wxGrid_GetSelectionBlockBottomRight) :void
  (_obj :pointer)
  (_arr :pointer))

(defcfun ("wxGrid_GetSelectedRows" wxGrid_GetSelectedRows) :int
  (_obj :pointer)
  (_arr :pointer))

(defcfun ("wxGrid_GetSelectedCols" wxGrid_GetSelectedCols) :int
  (_obj :pointer)
  (_arr :pointer))

(defcfun ("ELJGridTable_Create" ELJGridTable_Create) :pointer
  (_obj :pointer)
  (_EifGetNumberRows :pointer)
  (_EifGetNumberCols :pointer)
  (_EifGetValue :pointer)
  (_EifSetValue :pointer)
  (_EifIsEmptyCell :pointer)
  (_EifClear :pointer)
  (_EifInsertRows :pointer)
  (_EifAppendRows :pointer)
  (_EifDeleteRows :pointer)
  (_EifInsertCols :pointer)
  (_EifAppendCols :pointer)
  (_EifDeleteCols :pointer)
  (_EifSetRowLabelValue :pointer)
  (_EifSetColLabelValue :pointer)
  (_EifGetRowLabelValue :pointer)
  (_EifGetColLabelValue :pointer))

(defcfun ("ELJGridTable_Delete" ELJGridTable_Delete) :void
  (_obj :pointer))

(defcfun ("ELJGridTable_GetView" ELJGridTable_GetView) :pointer
  (_obj :pointer))

(defcfun ("ELJGridTable_SendTableMessage" ELJGridTable_SendTableMessage) :void
  (_obj :pointer)
  (id :int)
  (val1 :int)
  (val2 :int))

(defcfun ("wxGridEvent_GetRow" wxGridEvent_GetRow) :int
  (_obj :pointer))

(defcfun ("wxGridEvent_GetCol" wxGridEvent_GetCol) :int
  (_obj :pointer))

(defcfun ("wxGridEvent_GetPosition" wxGridEvent_GetPosition) :void
  (_obj :pointer)
  (_x :pointer)
  (_y :pointer))

(defcfun ("wxGridEvent_Selecting" wxGridEvent_Selecting) :int
  (_obj :pointer))

(defcfun ("wxGridEvent_ControlDown" wxGridEvent_ControlDown) :int
  (_obj :pointer))

(defcfun ("wxGridEvent_MetaDown" wxGridEvent_MetaDown) :int
  (_obj :pointer))

(defcfun ("wxGridEvent_ShiftDown" wxGridEvent_ShiftDown) :int
  (_obj :pointer))

(defcfun ("wxGridEvent_AltDown" wxGridEvent_AltDown) :int
  (_obj :pointer))

(defcfun ("wxGridSizeEvent_GetRowOrCol" wxGridSizeEvent_GetRowOrCol) :int
  (_obj :pointer))

(defcfun ("wxGridSizeEvent_GetPosition" wxGridSizeEvent_GetPosition) :void
  (_obj :pointer)
  (_x :pointer)
  (_y :pointer))

(defcfun ("wxGridSizeEvent_ControlDown" wxGridSizeEvent_ControlDown) :int
  (_obj :pointer))

(defcfun ("wxGridSizeEvent_MetaDown" wxGridSizeEvent_MetaDown) :int
  (_obj :pointer))

(defcfun ("wxGridSizeEvent_ShiftDown" wxGridSizeEvent_ShiftDown) :int
  (_obj :pointer))

(defcfun ("wxGridSizeEvent_AltDown" wxGridSizeEvent_AltDown) :int
  (_obj :pointer))

(defcfun ("wxGridRangeSelectEvent_GetTopLeftCoords" wxGridRangeSelectEvent_GetTopLeftCoords) :void
  (_obj :pointer)
  (_c :pointer)
  (_r :pointer))

(defcfun ("wxGridRangeSelectEvent_GetBottomRightCoords" wxGridRangeSelectEvent_GetBottomRightCoords) :void
  (_obj :pointer)
  (_c :pointer)
  (_r :pointer))

(defcfun ("wxGridRangeSelectEvent_GetTopRow" wxGridRangeSelectEvent_GetTopRow) :int
  (_obj :pointer))

(defcfun ("wxGridRangeSelectEvent_GetBottomRow" wxGridRangeSelectEvent_GetBottomRow) :int
  (_obj :pointer))

(defcfun ("wxGridRangeSelectEvent_GetLeftCol" wxGridRangeSelectEvent_GetLeftCol) :int
  (_obj :pointer))

(defcfun ("wxGridRangeSelectEvent_GetRightCol" wxGridRangeSelectEvent_GetRightCol) :int
  (_obj :pointer))

(defcfun ("wxGridRangeSelectEvent_Selecting" wxGridRangeSelectEvent_Selecting) :int
  (_obj :pointer))

(defcfun ("wxGridRangeSelectEvent_ControlDown" wxGridRangeSelectEvent_ControlDown) :int
  (_obj :pointer))

(defcfun ("wxGridRangeSelectEvent_MetaDown" wxGridRangeSelectEvent_MetaDown) :int
  (_obj :pointer))

(defcfun ("wxGridRangeSelectEvent_ShiftDown" wxGridRangeSelectEvent_ShiftDown) :int
  (_obj :pointer))

(defcfun ("wxGridRangeSelectEvent_AltDown" wxGridRangeSelectEvent_AltDown) :int
  (_obj :pointer))

(defcfun ("wxGridEditorCreatedEvent_GetRow" wxGridEditorCreatedEvent_GetRow) :int
  (_obj :pointer))

(defcfun ("wxGridEditorCreatedEvent_GetCol" wxGridEditorCreatedEvent_GetCol) :int
  (_obj :pointer))

(defcfun ("wxGridEditorCreatedEvent_GetControl" wxGridEditorCreatedEvent_GetControl) :pointer
  (_obj :pointer))

(defcfun ("wxGridEditorCreatedEvent_SetRow" wxGridEditorCreatedEvent_SetRow) :void
  (_obj :pointer)
  (row :int))

(defcfun ("wxGridEditorCreatedEvent_SetCol" wxGridEditorCreatedEvent_SetCol) :void
  (_obj :pointer)
  (col :int))

(defcfun ("wxGridEditorCreatedEvent_SetControl" wxGridEditorCreatedEvent_SetControl) :void
  (_obj :pointer)
  (ctrl :pointer))
